fix bug input resi and detail product overflow

--- a/src/assets/scss/paper-dashboard/_order-card.scss
+++ b/src/assets/scss/paper-dashboard/_order-card.scss
@@ -44,7 +44,7 @@
 .otd-card {
   width: 100%;
   height: 0px;
-  overflow: hidden;
+  overflow: scroll;
   transition: 0.2s;
   background: rgb(255, 255, 255);
   display: flex;
