--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -44,7 +44,7 @@
 
 .container-loader {
     display:flex;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 100%;
     z-index: 10;
